FIX: images & scrollbars

--- a/resources/site/assets/sass/components/fixed/next_section.scss
+++ b/resources/site/assets/sass/components/fixed/next_section.scss
@@ -5,7 +5,7 @@
     right: 5vw;
     bottom: 0;
 
-    img{
+    svg{
         width: 10.6vh;
         object-fit: contain;
         height: auto;
@@ -14,6 +14,4 @@
             width: 70px !important;
         }
     }
-
-    
 }
